syntax = "proto3";
option go_package = ".";


message RequestHeader {
  bool debug_flag = 1;
  string origin = 2;
}

message ResponseHeader {
  string msg = 1;
  DebugInfo debug_info = 2;
}

message DebugInfo {
  string shardKey = 1;
}

message Vector {
  string name = 1;
  repeated float vector = 2;
}

message SearchResult {
  repeated Item result = 1;
  DebugInfo debug_info = 2;
  string error = 3;
}

message Item {
  string id = 1;
  float score = 2;
  string doc = 3;
}
